# qcgpu

./: .buildinfo  .editorconfig  .gitignore  .travis.yml  CMakeLists.txt  Cargo.toml  EC2-install.md  ISSUE_TEMPLATE.md  LICENSE  NOTES.md  PULL_REQUEST_TEMPLATE.md  README.md  README.rst  Testing.ipynb  benchmark.py  benchmarking.py  example.c  example.py  gates.html  generate_docs.sh  genindex.html  guide.html  index.html  install.html  make.bat  objects.inv  operations.html  other_testing.py  quickstart.html  registers.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.py  test.py  testing.py  working.py
_sources/: gates.rst.txt  index.rst.txt  operations.rst.txt  quickstart.rst.txt  registers.rst.txt
_static/: theme-vendors.js  theme.css  theme.js
algorithms/: bernstein-vazirani.rs  deutsch-jozsa.rs  grover.rs  shor.rs  super-dense.rs
benches/: benchmark.rs  libquantum.rs  qiskit.rs
benches/qiskit/: hadamard_all.py
benchmark/: Visualize.ipynb  benchmark.py  benchmark_data.csv
book/: book.toml  getting-started.html  index.html  print.html  qcgpu.html  searchindex.js  searchindex.json
book/algorithms/: algorithms.html  bernstein-vazirani.html  deutsch-jozsa.html  grover.html  shor.html  super-dense.html
book/book/: searchindex.js
book/src/: SUMMARY.md  getting-started.md  qcgpu.md
book/user-guide/: decoherence.html  examples.html  gates.html  operations.html  registers.html  user-guide.html
doc/: aliases.js  getting_started.md  search-index.js
doc/bitflags/: index.html
doc/cl_sys/: all.html  constant.CL_ARGB.html  constant.CL_BLOCKING.html  constant.CL_BUFFER_CREATE_TYPE_REGION.html  constant.CL_BUILD_IN_PROGRESS.html  constant.CL_BUILD_NONE.html  constant.CL_BUILD_PROGRAM_FAILURE.html  constant.CL_BUILD_SUCCESS.html  constant.CL_COMMAND_COPY_IMAGE.html  constant.CL_COMMAND_COPY_IMAGE_TO_BUFFER.html  constant.CL_COMMAND_FILL_BUFFER.html  constant.CL_COMMAND_FILL_IMAGE.html  constant.CL_COMMAND_MAP_BUFFER.html  constant.CL_COMMAND_MARKER.html  constant.CL_COMMAND_MIGRATE_MEM_OBJECTS.html  constant.CL_COMMAND_NATIVE_KERNEL.html  constant.CL_COMMAND_NDRANGE_KERNEL.html  constant.CL_COMMAND_READ_BUFFER.html  constant.CL_COMMAND_READ_IMAGE.html  constant.CL_COMMAND_RELEASE_GL_OBJECTS.html  constant.CL_COMMAND_SVM_FREE.html  constant.CL_COMMAND_SVM_MEMCPY.html  constant.CL_COMMAND_SVM_MEMFILL.html  constant.CL_COMMAND_SVM_UNMAP.html  constant.CL_COMMAND_USER.html  constant.CL_COMMAND_WRITE_IMAGE.html  constant.CL_CONTEXT_ADAPTER_D3D9EX_KHR.html  constant.CL_CONTEXT_ADAPTER_D3D9_KHR.html  constant.CL_CONTEXT_ADAPTER_DXVA_KHR.html  constant.CL_CONTEXT_INTEROP_USER_SYNC.html  constant.CL_CONTEXT_PLATFORM.html  constant.CL_CONTEXT_PROPERTIES.html  constant.CL_CONTEXT_PROPERTY_USE_CGL_SHAREGROUP_APPLE.html  constant.CL_CONTEXT_REFERENCE_COUNT.html  constant.CL_DEPTH.html  constant.CL_DEPTH_STENCIL.html  constant.CL_DEVICE_ADDRESS_BITS.html  constant.CL_DEVICE_AFFINITY_DOMAIN_L3_CACHE.html  constant.CL_DEVICE_AFFINITY_DOMAIN_L4_CACHE.html  constant.CL_DEVICE_AFFINITY_DOMAIN_NUMA.html  (+294 more)
doc/enum_primitive/: enum.Option.html  macro.enum_from_primitive.html  macro.enum_from_primitive_impl_ty.html  trait.FromPrimitive.html
doc/failure/: struct.Backtrace.html  struct.Causes.html  struct.Error.html  trait.Fail.html
doc/libc/: all.html  constant.ABDAY_1.html  constant.ABDAY_2.html  constant.ABDAY_3.html  constant.ABDAY_4.html  constant.ABDAY_5.html  constant.ABDAY_6.html  constant.ABDAY_7.html  constant.ABMON_1.html  constant.ABMON_10.html  constant.ABMON_11.html  constant.ABMON_12.html  constant.ABMON_2.html  constant.ABMON_3.html  constant.ABMON_4.html  constant.ABMON_5.html  constant.ABMON_6.html  constant.ABMON_7.html  constant.ABMON_8.html  constant.ABMON_9.html  constant.ACCOUNTING.html  constant.AF_APPLETALK.html  constant.AF_CCITT.html  constant.AF_CHAOS.html  constant.AF_CNT.html  constant.AF_COIP.html  constant.AF_DATAKIT.html  constant.AF_DECnet.html  constant.AF_DLI.html  constant.AF_E164.html  constant.AF_ECMA.html  constant.AF_HYLINK.html  constant.AF_IMPLINK.html  constant.AF_INET.html  constant.AF_INET6.html  constant.AF_IPX.html  constant.AF_ISDN.html  constant.AF_ISO.html  constant.AF_LAT.html  constant.AF_LINK.html  (+1386 more)
doc/num/: all.html  fn.abs.html  fn.abs_sub.html  fn.checked_pow.html  fn.clamp.html  fn.one.html  fn.range.html  fn.range_inclusive.html  fn.range_step.html  fn.range_step_inclusive.html  fn.signum.html  fn.zero.html  index.html  struct.BigInt.html  trait.Float.html  (+20 more)
docs/: conf.py  gates.rst  guide.rst  index.rst  install.rst  installing.rst  simulators.md
doctrees/: environment.pickle  index.doctree  installing.doctree
examples/: Grover's Search Algorithm.md  bell-state.py  bell-state.rs  bell_state.py  bernstein-vazirani.rs  bernstein_vazirani.py  deutsch-jozsa.py  deutsch-jozsa.rs  ghz-state.rs  grover.rs  qft.py  shor.rs  simple.rs  super-dense.rs
extras/: CMakeLists.txt  simulator_cli.cpp
html/: .buildinfo  genindex.html  installing.html  objects.inv  search.html  searchindex.js
include/: communication.h  tangle.h
notebooks/: Benchmarking.ipynb  In-Progress Experiments.ipynb  Testing.ipynb  Untitled.ipynb  Verification.ipynb  ipython_cell_input.py  out.csv
python/: CMakeLists.txt  __init__.py  _tangle.pyx  pytangle.pyx
python/circuits/: __init__.py  instruction.py
qasm/: parser.c
qcgpu/: __init__.py  backend.py  gate.py  state.py
src/: bin.rs  communication.c  distributed.c  error.rs  gate.rs  gate_application.c  gates.c  gates.rs  kernel.rs  kron.rs  lib.rs  library.cpp  main.c  main.rs  measurment.c  output.rs  state.c  state.rs  traits.rs  utilities.rs
standalone/: cli.c
tangle/: CMakeLists.txt  __init__.py  _tangle.cxx  _tangle.pyx
tangle/include/: communication.h  tangle.h
tangle/src/: CMakeLists.txt  cpu.c  gates.c  impl_mpi.c  implementation.c  mpi.c  omp.c
tangle/src/distributed/: communication.c  environment.c  gate_application.c  state.c
tests/: gates.rs  opencl.rs  register.rs  test_gate.py  test_gate_application.py  test_other.py  test_state.py  utilities.rs
(+3288 files in other folders)
