[package]
description = "Open Source, High Performance & Hardware Accelerated, Quantum Computer Simulation in Rust"
name = "qcgpu"
version = "0.1.0"
authors = ["Adam Kelly <adamkelly2201@gmail.com>"]
documentation = "https://qcgpu.github.io/qcgpu-rust/doc/qcgpu/index.html"
homepage = "https://qcgpu.github.com/"
readme = "./README.md"
keywords = ["quantum", "computation", "gpu", "simulation"]
license = "MIT"
exclude = ["algorithms/**/*", "benches/**/*", "examples/**/*", ".editorconfig", "EC2-install.md", "ISSUE_TEMPLATE.md", "PULL_REQUEST_TEMPLATE.md"]

[badges]
travis-ci = { repository = "qcgpu/qcgpu-rust", branch = "master" }
maintenance = { status = "actively-developed" }

[features]
default = []
decoherence = []

[lib]
name = "qcgpu"
path = "src/lib.rs"

[dependencies]
num-complex = "0.1.43"
rand = "0.4.2"
ocl = "0.18"

[dev-dependencies]
criterion = "0.2.2"
libquantum-patched = "0.1.3"

[[bench]]
name = "benchmark"
harness = false

[[bench]]
name = "qiskit"
harness = false

[[bench]]
name = "libquantum"
harness = false

[[example]]
name = "bernstein-vazirani"
doc = false
path = "algorithms/bernstein-vazirani.rs"

[[example]]
name = "deutsch-jozsa"
doc = false
path = "algorithms/deutsch-jozsa.rs"

[[example]]
name = "superdense"
doc = false
path = "algorithms/super-dense.rs"

[[example]]
name = "shor"
doc = false
path = "algorithms/shor.rs"

[[example]]
name = "grover"
doc = false
path = "algorithms/grover.rs"
